objects/Time_Reporting__c.object
<CustomObject>
    <description>Time Reporting</description>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Reporting</relationshipLabel>
        <relationshipName>Time_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Internal Project</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paid Time Off (PTO)</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>Incurred_By__r.EmployeeNumber</formula>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incurred_By_Alias__c</fullName>
        <formula>Incurred_By__r.Alias</formula>
        <label>Incurred By Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incurred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPM4 Time</label>
        <referenceTo>MPM4_BASE__Milestone1_Time__c</referenceTo>
        <relationshipLabel>Time Reporting</relationshipLabel>
        <relationshipName>Time_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MS_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MS Task</label>
        <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
        <relationshipLabel>Time Reporting</relationshipLabel>
        <relationshipName>Time_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MS_Time4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MS Time4</label>
        <referenceTo>Milestone1_Time__c</referenceTo>
        <relationshipLabel>Time Reporting (MS Time4)</relationshipLabel>
        <relationshipName>Time_Reporting1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Time Reporting</relationshipLabel>
        <relationshipName>Time_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Time Reporting</relationshipLabel>
        <relationshipName>Time_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Time Reporting</relationshipLabel>
        <relationshipName>Time_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <description>Time has been submitted to Oracle</description>
        <formula>MPM4_Time__r.Submitted__c</formula>
        <inlineHelpText>The time entry has been submitted to Oracle Time Interface.</inlineHelpText>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Id__c</fullName>
        <externalId>true</externalId>
        <label>Time Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Source__c</fullName>
        <label>Time Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Type__c</fullName>
        <label>Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Reporting</label>
    <nameField>
        <label>Time Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>